feat: use global.imagePullSecrets

--- a/helm/charts/nats/values.yaml
+++ b/helm/charts/nats/values.yaml
@@ -2,6 +2,7 @@
 # Global options
 ################################################################################
 global:
+  imagePullSecrets: []
   image:
     # global image pull policy to use for all container images in the chart
     # can be overridden by individual image pullPolicy
