--- a/helm/charts/nats/files/stateful-set/pod-template.yaml
+++ b/helm/charts/nats/files/stateful-set/pod-template.yaml
@@ -29,7 +29,7 @@ spec:
   # service discovery uses DNS; don't need service env vars
   enableServiceLinks: false
   
-  {{- with .Values.global.image.pullSecretNames }}
+  {{- with (default .Values.global.image.pullSecretNames .Values.global.imagePullSecrets) }}
   imagePullSecrets:
   {{- range . }}
   - name: {{ . | quote }}
