--- a/helm/charts/nats/values.yaml
+++ b/helm/charts/nats/values.yaml
@@ -14,6 +14,10 @@ global:
     # global registry to use for all container images in the chart
     # can be overridden by individual image registry
     registry:
+  # -- Security Context for all pods
+  podSecurityContext: {}
+  # -- Security Context for all containers
+  containerSecurityContext: {}
 
   # global labels will be applied to all resources deployed by the chart
   labels: {}
